k8s/auction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-service
  namespace: reuse-hub
  labels:
    app: auction-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction-service
  template:
    metadata:
      labels:
        app: auction-service
    spec:
      containers:
        - name: auction-service
          image: luongtandat512/auction-service:latest
          ports:
            - containerPort: 8092
          resources:
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auction-service
  namespace: reuse-hub
spec:
  selector:
    app: auction-service
  ports:
    - name: http
      protocol: TCP
      port: 8092
      targetPort: 8092
