k8s/chat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: reuse-hub
  labels:
    app: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image:  luongtandat512/chat-service:latest
          ports:
            - containerPort: 8086
          resources:
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: reuse-hub
spec:
  selector:
    app: chat-service
  ports:
    - name: http
      protocol: TCP
      port: 8086
      targetPort: 8086
