k8s/frontend-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: reuse-hub
  labels:
    app: frontend-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
        - name: frontend-web
          image: luongtandat512/frontend-web:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: reuse-hub
spec:
  selector:
    app: frontend-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
