k8s/identity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: reuse-hub
  labels:
    app: identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: luongtandat512/identity-service:latest
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: reuse-hub
spec:
  selector:
    app: identity-service
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
