k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: reuse-hub
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: luongtandat512/notification-service:latest
          ports:
            - containerPort: 8087
          resources:
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: reuse-hub
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      protocol: TCP
      port: 8087
      targetPort: 8087
