k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: reuse-hub
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: luongtandat512/payment-service:latest
          ports:
            - containerPort: 8085
          resources:
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: reuse-hub
spec:
  selector:
    app: payment-service
  ports:
    - name: http
      protocol: TCP
      port: 8085
      targetPort: 8085
