k8s/profile-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  namespace: reuse-hub
  labels:
    app: profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile-service
          image: luongtandat512/profile-service:latest
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: reuse-hub
spec:
  selector:
    app: profile-service
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
